# synaptic

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  openai-spec-custom.yaml  openai-spec-model.yaml  openai-spec-original.yaml
src/: lib.rs  main.rs
src/core/: generator.rs  load_model.rs  mod.rs  output_stream.rs
src/embedding/: lib.rs
src/openai/: http_entities.rs  http_service.rs  mod.rs  models.rs
