[package]
name = "synap-forge-llm"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"

#openai API
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4.38"
hyper = "1.4.1"
swagger = { version = "6.5.0", features = ["serdejson", "server", "client", "tls", "tcp"] }

#Web
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
flume = "0.11.0"
futures = "0.3.30"
derive_more = "0.99.18"

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn", version = "0.8.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers", version = "0.8.0" }
bindgen_cuda = { git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6", optional = true }
cudarc = { version = "0.12.0", optional = true }

hf-hub = "0.3.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokenizers = "0.19.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
#core-graphics-types = {version = "0.1.3", optional = true}

[features]
default = ["candle-core/default", "candle-nn/default", "candle-transformers/default"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda", "dep:cudarc"]
cudnn = ["candle-core/cudnn"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

#[build.env]
#passthrough = [
#    "RUST_BACKTRACE=full",
#    "RUST_LOG",
#    "TRAVIS",
#]