[package]
name = "synap-forge-llm"
version = "0.1.3"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.94"

#openai API
chrono = "0.4.39"

#Web
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn", version = "0.8.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers", version = "0.8.1" }
#candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", optional = true }

bindgen_cuda = { git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6", optional = true }
cudarc = { version = "0.12.1", optional = true }

hf-hub = "0.3.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokenizers = "0.21.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#core-graphics-types = {version = "0.1.3", optional = true}

[features]
default = ["candle-core/default", "candle-nn/default", "candle-transformers/default"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda", "dep:cudarc"]
cudnn = ["candle-core/cudnn"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

#[build.env]
#passthrough = [
#    "RUST_BACKTRACE=full",
#    "RUST_LOG",
#    "TRAVIS",
#]